fixed nav on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -70,6 +70,10 @@ footer p {
 
 //mobile
 @media only screen and (max-width: 768px) {
+    nav {
+        position: fixed;
+    }
+    
     .nav_links {
         width: 240px;
         height: 100vh;
